<resources>
    <string name="app_name">Reminder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Garead Prints</string>
    <string name="nav_header_subtitle">Adenike Aderibigbe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_max_order">Maximum order per day</string>
    <string name="pref_default_max_order">10</string>

    <string name="pref_title_price">Price</string>
    <string name="pref_default_price">100</string>

    <!-- Example settings for Data & Sync -->
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_order_notifications">Order notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_alarm_time">Reminder time</string>
    <string name="number_of_orders">number_of_orders</string>
    <string name="price_of_job">price_of_job</string>
    <string name="date_picker_title">Due date</string>
    <string name="name">Name</string>
    <string name="order_quatity">Order Qauntity</string>
    <string name="due_date">Due Date</string>
    <string name="price">Total Price</string>
    <string-array name="pref_sync_alarm_entries">
        <item>2 hours </item>
        <item>4 hours </item>
        <item>1 day</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_alarm_values">
        <item>120</item>
        <item>240</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>
</resources>
