<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icons8_home_7"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_order_list"
            android:icon="@drawable/ic_icons8_bulleted_list"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_icons8_settings_1"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_icons8_info_1"
            android:title="@string/about" />
    </group>




</menu>
