<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/pref_default_max_order"
            android:inputType="numberSigned"
            android:key="@string/number_of_orders"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_max_order" />

        <EditTextPreference
            android:defaultValue="price"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Edit text preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notification">
        <!-- A 'parent' pref, which enables/disables child preferences (below)
      when checked/unchecked. -->

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This pref will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_order"
            android:title="@string/pref_title_order_notifications" />

        <ListPreference
            android:defaultValue="1440"
            android:dependency="notifications_order"
            android:entries="@array/pref_sync_alarm_entries"
            android:entryValues="@array/pref_sync_alarm_values"
            android:key="notifications_alarm_time"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_alarm_time" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_order"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This pref will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_order"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

</PreferenceScreen>
